--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "antd": "^4.23.4",
     "axios": "^0.27.2",
+    "ethers": "^5.7.2",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "history": "^5.3.0",
